--- a/index.html
+++ b/index.html
@@ -38,16 +38,45 @@
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
           <ul class="advantage-list">
-            <li class="advantage">Настоящий городок</li>
-            <li class="advantage">Мост дьявола</li>
-            <li class="advantage">Небольшая площадь</li>
-            <li class="advantage">Красивая дорога</li>
-            <li class="advantage">Мало туристов</li>
+            <li class="advantage">
+              <h2>Настоящий городок</h2>
+              <p>- №1 -</p>
+              <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+            </li>
+            <li class="advantage">
+              <h2>Мост дьявола</h2>
+              <p>- №2 -</p>
+              <p>Да, по нему можно пройти! Если конечно Вы осмелитесь</p>
+            </li>
+            <li class="advantage">
+              <h2>Небольшая площадь</h2>
+              <p>- №3 -</p>
+              <p>Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="advantage">
+              <h2>Красивая дорога</h2>
+              <p>- №4 -</p>
+              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="advantage">
+              <h2>Мало туристов</h2>
+              <p>- №5 -</p>
+              <p>Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
               <li class="advantage">
                 <ul class="more-advantages">
-                  <li class="more-advantage">Жилье</li>
-                  <li class="more-advantage">Еда</li>
-                  <li class="more-advantage">Сувениры</li>
+                  <li class="more-advantage">
+                    <h2>Жилье</h2>
+                    <p>Рекоендуем пожить в настоящем мотеле, все как в кино!</p>
+                  </li>
+                  <li class="more-advantage">
+                    <h2>Еда</h2>
+                    <p>Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
+                  </li>
+                  <li class="more-advantage">
+                    <h2>Сувениры</h2>
+                    <p>Не только китайского, но местного производства!</p>
+                  </li>
                 </ul>
               </li>
             </ul>
