добавил svg и лого

--- a/hotels.html
+++ b/hotels.html
@@ -13,7 +13,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class-"main-header-logo">
-          <img scr="img/index-logo.svg" alt="Логотип Седона">
+          <img scr="img/logo-sedona.png" alt="Логотип Седона">
         </a>
         <div class="site-navigation-div">
           <ul class="site-navigation">
