--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Седона</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/script.js"></script>
   </head>
@@ -13,7 +13,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class-"main-header-logo">
-          <img scr="img/index-logo.svg" alt="Логотип Седона">
+          <img scr="img/logo-sedona.png" alt="Логотип Седона">
         </a>
         <div class="site-navigation-div">
           <ul class="site-navigation">
