Подготовка графики и текстовых стилей
Вроде сделал как нужно

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Седона</title>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/script.js"></script>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
@@ -14,7 +15,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class-"main-header-logo">
-          <img scr="http://placehold.it/150x100" alt="Логотип Седона">
+          <img scr="img/logo-sedona.png" alt="Логотип Седона" width="137">
         </a>
         <div class="site-navigation-block">
           <ul class="site-navigation">
@@ -30,7 +31,7 @@
     <main class="container">
 
       <section class="welcome">
-        <img src="http://placehold.it/150x100" alt="Добро пожаловать в Седону">
+        <img src="img/background-photo.jpg" alt="Добро пожаловать в Седону">
         <h1 class="visually-hidden">Седона</h1>
           <h2>Cедона - небольшой городок в Аризоне, Заслуживающий большего!</h2>
           <p class="5-advantages">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
@@ -111,12 +112,12 @@
 
       <section>
         <h2 class="visually-hidden">Карта Седоны</h2>
-        <img src="http://placehold.it/150x100">
+        <img src="img/map.png" width="1200">
       </section>
 
     </main>
 
-    <footer>
+    <footer class="main-footer">
       <div class="visit">
         <a class="visit-sedona" href="#">#VISITSEDONA</a>
       </div>
@@ -127,10 +128,12 @@
         <a class="social-button" href="#">Инстаграм</a>
       </div>
 
-      <p class="footer-copyright">
-          <b>Разработано:</b>
-          <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-      </p>
+      <div class="footer-copyright">
+        <a class="copyright-logo" href="https://htmlacademy.ru">Website by
+          <object type="image/svg+xml" data="img/logo-htmlacademy.svg">
+          </object>
+        </a>
+      </div>
     </footer>
 
   </body>
