--- a/hotels.html
+++ b/hotels.html
@@ -3,7 +3,8 @@
 
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Седона</title>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/script.js"></script>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
@@ -14,7 +15,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class-"main-header-logo">
-          <img scr="http://placehold.it/150x100" alt="Логотип Седона">
+          <img scr="img/logo-sedona.png" alt="Логотип Седона">
         </a>
         <div class="site-navigation-block">
           <ul class="site-navigation">
@@ -113,8 +114,9 @@
         <ul class="hotel-list">
           <li class="hotel-name">
             <div class="hotel-left-side">
-              <img class="hotel-images" src="img/amara-resort-spa.jpeg" alt="Гостиница AMARA RESORT &#38; SPA">
+              <img class="hotel-images" src="img/amara-resort-spa.jpg" alt="Гостиница AMARA RESORT &#38; SPA">
               <p>AMARA RESORT &#38; SPA</p>
+              <span>Гостиница от 4000 Р.</span>
               <a class="button-detail" href="hotels/amara-resort-spa.html">Подробнее</a>
               <a class="button-booking" href="booking.html">Забронировать</a>
             </div>
@@ -126,10 +128,10 @@
             </div>
           </li>
           <li class="hotel-name">
-            <img class="hotel-images" src="img/desert-quail-inn.jpeg" alt="Мотель DESERT QUAIL INN">
+            <img class="hotel-images" src="img/desert-quail-inn.jpg" alt="Мотель DESERT QUAIL INN">
             <div class="hotel-left-side">
               <p>DESERT QUAIL INN</p>
-              <span>Гостиница от 4000 Р.</span>
+              <span>Гостиница от 3000 Р.</span>
               <a class="button-detail" href="hotels/desert-quail-inn.html">Подробнее</a>
               <a class="button-booking" href="booking.html">Забронировать</a>
             </div>
@@ -141,9 +143,10 @@
             </div>
           </li>
           <li class="hotel-name">
-            <img class="hotel-images" src="img/villas-at-poco-diablo.jpeg" alt="Апартаменты VILLAS AT POCO DIABLO">
+            <img class="hotel-images" src="img/villas-at-poco-diablo.jpg" alt="Апартаменты VILLAS AT POCO DIABLO">
             <div class="hotel-left-side">
               <p>VILLAS AT POCO DIABLO</p>
+              <span>Гостиница от 2000 Р.</span>
               <a class="button-detail" href="hotels/villas-at-poco-diablo.html">Подробнее</a>
               <a class="button-booking" href="booking.html">Забронировать</a>
             </div>
@@ -158,7 +161,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="main-footer">
       <div class="visit">
         <a class="visit-sedona" href="#">#VISITSEDONA</a>
       </div>
@@ -169,10 +172,12 @@
         <a class="social-button" href="#">Инстаграм</a>
       </div>
 
-      <p class="footer-copyright">
-          <b>Разработано:</b>
-          <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-      </p>
+      <div class="footer-copyright">
+        <a class="copyright-logo" href="https://htmlacademy.ru">Website by
+          <object type="image/svg+xml" data="img/logo-htmlacademy.svg">
+          </object>
+        </a>
+      </div>
     </footer>
 
   </body>
