много чего изменил
файл range.css выделен отдельно для удобства - потом вернем обратно в стили

--- a/hotels.html
+++ b/hotels.html
@@ -6,6 +6,7 @@
     <title>Седона</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/range.css">
     <script type="text/javascript" src="js/script.js"></script>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
@@ -14,13 +15,15 @@
 
     <header class="main-header">
       <nav class="main-navigation">
-        <a class-"main-header-logo">
-          <img scr="img/logo-sedona.png" alt="Логотип Седона">
-        </a>
         <div class="site-navigation-block">
           <ul class="site-navigation">
             <li><a href="index.html">Информация</a></li>
             <li><a href="photo-and-video.html">Фото и видео</a></li>
+            <li>
+              <a href="index.html" class="main-header-logo">
+                <img src="img/logo-sedona.png" alt="Логотип Седона" width="137" width="70">
+              </a>
+            </li>
             <li><a href="site-map.html">Карта сайта</a></li>
             <li><a href="hotels.html">Гостиницы</a></li>
           </ul>
@@ -114,7 +117,7 @@
         <ul class="hotel-list">
           <li class="hotel-name">
             <div class="hotel-left-side">
-              <img class="hotel-images" src="img/amara-resort-spa.jpg" alt="Гостиница AMARA RESORT &#38; SPA">
+              <img class="hotel-images" src="img/amara-resort-spa.jpeg" alt="Гостиница AMARA RESORT &#38; SPA">
               <p>AMARA RESORT &#38; SPA</p>
               <span>Гостиница от 4000 Р.</span>
               <a class="button-detail" href="hotels/amara-resort-spa.html">Подробнее</a>
@@ -128,7 +131,7 @@
             </div>
           </li>
           <li class="hotel-name">
-            <img class="hotel-images" src="img/desert-quail-inn.jpg" alt="Мотель DESERT QUAIL INN">
+            <img class="hotel-images" src="img/desert-quail-inn.jpeg" alt="Мотель DESERT QUAIL INN">
             <div class="hotel-left-side">
               <p>DESERT QUAIL INN</p>
               <span>Гостиница от 3000 Р.</span>
