Доступная разметка личного проекта
вроде тут тоже все сделано
прошу проверить

--- a/hotels.html
+++ b/hotels.html
@@ -170,9 +170,29 @@
       </div>
 
       <div class="footer-social">
-        <a class="social-button" href="#">Вконтакте</a>
-        <a class="social-button" href="#">Фейсбук</a>
-        <a class="social-button" href="#">Инстаграм</a>
+        <ul class="social-buttons">
+          <li class="social-button">
+            <a href="#tr">
+              <div class="twitter">
+                <img src="img/twitter.svg" alt="Twitter">
+              </div>
+            </a>
+          </li>
+          <li class="social-button">
+            <a href="#fb">
+              <div class="facebook">
+                <img src="img/fb-icon.svg" alt="Twitter">
+              </div>
+            </a>
+          </li>
+          <li class="social-button">
+            <a href="#yt">
+              <div class="youtube">
+                <img src="img/youtube.svg" alt="Twitter">
+              </div>
+            </a>
+          </li>
+        </ul>
       </div>
 
       <div class="footer-copyright">
