--- a/index.html
+++ b/index.html
@@ -141,18 +141,24 @@
       <div class="footer-social">
         <ul class="social-buttons">
           <li class="social-button">
-            <a class="twitter" href="#twit">
-              <img src="img/twitter.svg" alt="Twitter">
+            <a href="#tr">
+              <div class="twitter">
+                <img src="img/twitter.svg" alt="Twitter">
+              </div>
             </a>
           </li>
           <li class="social-button">
-            <a class="facebook" href="#fb">
-
+            <a href="#fb">
+              <div class="facebook">
+                <img src="img/fb-icon.svg" alt="Twitter">
+              </div>
             </a>
           </li>
           <li class="social-button">
-            <a class="youtube" href="#yt">
-              
+            <a href="#yt">
+              <div class="youtube">
+                <img src="img/youtube.svg" alt="Twitter">
+              </div>
             </a>
           </li>
         </ul>
